fix background image size, make code more readable and add comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body,
 body {
   font-family: sans-serif;
   background-image: url("../images/software_development.jpg");
+  background-size: cover;
 }
 
 .wrapper {
